# Quantara

./: .gitignore  README.md  roadmap.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  error_response.json  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: audit.py  auth.py  market.py  portfolio.py  recommendations.py  research.py  risk.py  signals.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  logging.py  security.py
backend/app/models/: __init__.py  audit.py  recommendation.py  research.py  signal.py  stock.py  user.py
backend/app/providers/: __init__.py  sec.py  yahoo.py
backend/app/services/: llm_orchestrator.py  recommendation_engine.py  research_engine.py  risk_engine.py  signal_engine.py
backend/app/tests/: conftest.py  test_api.py  test_e2e_integration.py  test_llm_orchestrator.py  test_phase3.py  test_phase4.py  test_risk_engine.py  test_signal_engine.py
backend/app/tests/providers/: test_sec.py  test_sec_form4.py  test_yahoo.py
frontend/: .gitignore  eslint.config.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/e2e/: auth.spec.ts  dashboard.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/context/: AuthContext.tsx  ThemeProvider.tsx
frontend/src/hooks/: useRecommendations.ts  useResearch.ts  useSignals.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Account.tsx  Dashboard.tsx  Login.tsx  Register.tsx  ResearchExplorer.tsx  Risk.tsx  Settings.tsx  Signals.tsx  Simulation.tsx  StockDetail.tsx
frontend/src/types/: index.ts
